lifeguard-derive/tests/ui/compile_error_partial_model_invalid_identifier_single_colon.stderr
error: Entity path contains invalid identifier ":foo" at position 1 in #[lifeguard(entity = ":foo")]. Identifiers must be valid Rust identifiers (e.g., start with a letter or underscore, contain only alphanumeric characters and underscores).
  --> tests/ui/compile_error_partial_model_invalid_identifier_single_colon.rs:10:12
   |
10 | pub struct UserPartial {
   |            ^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/compile_error_partial_model_invalid_identifier_single_colon.rs:13:2
   |
13 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/compile_error_partial_model_invalid_identifier_single_colon.rs`
